Наработки 20180218. RAW/Реализована регистрация (по минимуму)

--- a/php/.htaccess
+++ b/php/.htaccess
@@ -9,5 +9,5 @@ Options +FollowSymlinks
 	RewriteCond %{REQUEST_FILENAME} -l [OR]
 	RewriteCond %{REQUEST_FILENAME} -d
 	RewriteRule ^.*$ - [NC,L]
-	RewriteRule ^.*$ /public/index.php [NC,L]
+	RewriteRule ^.*$ index.php [NC,L]
 </IfModule>
